<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/app_name_subtitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/firstNameEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:hint="@string/first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:hint="@string/last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            style="@style/PrimaryButton"
            android:text="@string/register" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alreadyHasAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/already_has_an_account" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>