<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ui.fragments.AdministrationFragment">

    <LinearLayout
        android:id="@+id/filterTitleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/default_margin"
        android:paddingTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/filters" />

        <ImageView
            android:id="@+id/filterArrowIv"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_arrow_down"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filtersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin">

        <RadioGroup
            android:id="@+id/administrationTypeRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/administrationTypeInOutRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:textColor="@color/black"
                android:buttonTint="@color/white"
                android:text="@string/in_and_out" />

            <RadioButton
                android:id="@+id/administrationTypeInRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:buttonTint="@color/white"
                android:text="@string/in" />

            <RadioButton
                android:id="@+id/administrationTypeOutRb"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/out" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/productCodeEt"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@id/administrationTypeRg"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:hint="@string/product_code"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/productNameEt"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/productCodeEt"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/product_name"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fromTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/startDateContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/startDateContainer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/from" />

        <androidx.cardview.widget.CardView
            android:id="@+id/startDateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/productNameEt"
            app:layout_constraintStart_toEndOf="@id/fromTv"
            android:background="@color/white"
            app:cardCornerRadius="9dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/startDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:text="01.02.2022 00:00" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/startDateContainer"
            app:layout_constraintStart_toEndOf="@id/startDateContainer"
            app:layout_constraintBottom_toBottomOf="@id/startDateContainer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/to" />

        <androidx.cardview.widget.CardView
            android:id="@+id/endDateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/startDateContainer"
            app:layout_constraintStart_toEndOf="@id/toTv"
            android:background="@color/white"
            app:cardCornerRadius="9dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/endDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:text="01.02.2022 00:00" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/applyFiltersBtn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/startDateContainer"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/PrimaryButton"
            android:textSize="11sp"
            android:text="@string/apply_filters" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetFiltersBtn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/applyFiltersBtn"
            app:layout_constraintStart_toEndOf="@id/applyFiltersBtn"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            style="@style/SecondaryButton"
            android:textSize="11sp"
            android:text="@string/reset_filters" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/code" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/quantity_short" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/date_and_time" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/administrationRv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>