<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/takePictureTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/take_picture" />

    <View
        android:id="@+id/chooseFromGallerySeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseFromGalleryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/choose_from_gallery" />

    <View
        android:id="@+id/removePictureSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/removePictureTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/remove_profile_picture" />
</LinearLayout>