<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profilePictureContainer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/profilePictureIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_default_profile_picture"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/changePictureContainer"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/changePictureIv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    app:tint="@color/parsley"
                    android:src="@drawable/ic_camera"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/firstNameEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:hint="@string/first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:hint="@string/last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/newPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            style="@style/CustomEditText"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/new_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/PrimaryButton"
            android:text="@string/save" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>